--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ pages:
   stage: deploy
   script:
   - npm install
+  - mv ./config/dev.env.example.js ./config/dev.env.js
   - mv ./config/prod.env.example.js ./config/prod.env.js
   - npm run build
   - mv dist public
