--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "font-awesome": "^4.6.3",
     "moment": "^2.15.1",
     "vue": "^2.0.1",
+    "vue-gitlab-api": "^0.1.4",
     "vue-resource": "^1.0.3"
   },
   "devDependencies": {
