forgot about vuex dependency

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "moment": "^2.15.1",
     "vue": "^2.0.1",
     "vue-gitlab-api": "^0.1.6",
-    "vue-resource": "^1.0.3"
+    "vue-resource": "^1.0.3",
+    "vuex": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
