added .gitlab-ci.yml environment with GanttLab Live version

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,5 +11,8 @@ pages:
   artifacts:
     paths:
     - public
+  environment:
+    name: GanttLab live
+    url: https://clorichel.gitlab.io/ganttlab/
   only:
   - master
