GanttLab is now GanttLab Live and moved to its own group

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,6 @@ pages:
     - public
   environment:
     name: GanttLab live
-    url: https://clorichel.gitlab.io/ganttlab/
+    url: https://live.ganttlab.org/
   only:
   - master
