--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ganttlab",
   "version": "0.2.0",
-  "description": "An easy to use, fully functional Gantt chart for GitLab.",
+  "description": "The easy to use, fully functional Gantt chart for GitLab.",
   "author": "clorichel <contact@clorichel.com>",
   "private": false,
   "scripts": {
