--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ pages:
   - npm install --silent
   - mv ./config/dev.env.example.js ./config/dev.env.js
   - mv ./config/prod.env.example.js ./config/prod.env.js
-  - sed -i "s/^\(.*mounted.*function.*$\)/\1'\n${GA_TRACKING}'/" ./src/App.vue
+  - sed -i "s#^\(.*mounted.*function.*$\)#\1\n${GA_TRACKING}#" ./src/App.vue
   - npm run build
   - mv dist public
   - mkdir -p public/.well-known/acme-challenge
