--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.15.1",
     "vue": "^2.0.1",
     "vue-gitlab-api": "^0.1.6",
+    "vue-multiselect": "^2.0.0-beta.10",
     "vue-resource": "^1.0.3",
     "vuex": "^2.0.0"
   },
