--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "d3": "^3.5.17",
     "font-awesome": "^4.6.3",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.15.1",
     "vue": "^2.0.1",
     "vue-gitlab-api": "^0.1.6",
