--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ganttlab-live",
   "version": "0.3.0",
-  "description": "The easy to use, fully functional Gantt chart for GitLab.",
+  "description": "The easy to use, fully functional Gantt chart for GitLab and GitHub.",
   "author": "clorichel <contact@clorichel.com>",
   "private": false,
   "scripts": {
@@ -15,6 +15,7 @@
     "lodash.debounce": "^4.0.8",
     "moment": "^2.15.1",
     "vue": "^2.0.1",
+    "vue-github-api": "^0.1.7",
     "vue-gitlab-api": "^0.1.6",
     "vue-multiselect": "^2.0.0-beta.10",
     "vue-resource": "^1.0.3",
