--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "font-awesome": "^4.6.3",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.15.1",
+    "moment-timezone": "^0.5.17",
     "vue": "^2.0.1",
     "vue-github-api": "^0.1.7",
     "vue-gitlab-api": "^0.1.6",
