getting around docker hub quirks

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,6 +53,6 @@ Docker Hub Image:
     - docker info
     - docker login -u "$DOCKER_HUB_USER" -p "$DOCKER_HUB_PASSWORD" index.docker.io
     - docker build -f devops/deploy/DockerHub/Dockerfile -t "ganttlab/ganttlab-live:latest" .
-    - docker push ganttlab/ganttlab-live:latest
+    - docker push index.docker.io/ganttlab/ganttlab-live:latest
   only:
     - master
