update CloudFront configuration to allow for unsecured http
fixes #83

--- a/devops/deploy/AWS/CloudFormation/stack.yaml
+++ b/devops/deploy/AWS/CloudFormation/stack.yaml
@@ -64,7 +64,7 @@ Resources:
               HTTPSPort: "443"
               OriginProtocolPolicy: http-only
         DefaultCacheBehavior:
-          ViewerProtocolPolicy: redirect-to-https
+          ViewerProtocolPolicy: allow-all
           ForwardedValues:
             QueryString: true
           TargetOriginId: !Sub S3-${AWS::StackName}
